--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <div class="catalog-buttons">
             <a href="https://www.canva.com/design/DAGoRRtR_tI/hAAUL89WkWHMNuYYVZvpTw/view?utm_content=DAGoRRtR_tI&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h3b43af5edc" class="catalog-btn">
                 <i class="fas fa-book"></i>
-                <span>Catálogo 1</span>
+                <span>Día del Padre</span>
             </a>
+            <!--
             <a href="#" class="catalog-btn">
                 <i class="fas fa-tags"></i>
                 <span>Ofertas</span>
@@ -37,6 +38,7 @@
                 <i class="fas fa-fire"></i>
                 <span>Nuevos</span>
             </a>
+            -->
         </div>
 
         <!-- Botón de WhatsApp -->
