--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
 
         <!-- Botones de Catálogos -->
         <div class="catalog-buttons">
+            <a href="https://www.canva.com/design/DAGx70nBcSM/jVwMBTRXDAxUN-vKrYMnmw/view?utm_content=DAGx70nBcSM&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h371d420ada" class="catalog-btn">
+                <i class="fas fa-book"></i>
+                <span>Catalogo</span>
+            </a>
+            <a href="https://www.canva.com/design/DAGx8bf59Rw/MPGcwN2E94a4SDwU1Z7zdw/view?utm_content=DAGx8bf59Rw&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h1f1d81573e " class="catalog-btn">
+                <i class="fas fa-book"></i>
+                <span>Catalogo para PYMES</span>
+            </a>
             <a href="https://www.canva.com/design/DAGoRRtR_tI/hAAUL89WkWHMNuYYVZvpTw/view?utm_content=DAGoRRtR_tI&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h3b43af5edc" class="catalog-btn">
                 <i class="fas fa-book"></i>
-                <span>Día del Padre</span>
+                <span>Día del Padre 2025</span>
             </a>
             <!--
             <a href="#" class="catalog-btn">
